# locus

./: .gitignore  .locus-project  CONTRIBUTING.md  Cargo.toml  FUTURE_GAPS.md  LICENSE  README.md  dist.toml  session-ses_259e.md  session-ses_259f.md  session-ses_25a0.md
agents/: academic-researcher.md  algorithm-agent.md  architect.md  artist.md  contrarian-researcher.md  deep-investigation-researcher.md  designer.md  engineer.md  investigative-researcher.md  multi-angle-researcher.md  pentester.md  plan-agent.md  qa-tester.md  researcher.md  security.md  traits.yaml  ui-reviewer.md
algorithm/: v1.0.md  v1.1.md
crates/locus-adapter-claude/: Cargo.toml
crates/locus-adapter-claude/src/: capabilities.rs  config_gen.rs  events.rs  lib.rs
crates/locus-adapter-opencode/: Cargo.toml
crates/locus-adapter-opencode/src/: capabilities.rs  config_gen.rs  events.rs  lib.rs  run.rs
crates/locus-adapter-opencode/tests/fixtures/: opencode_final_answer.jsonl
crates/locus-cli/: Cargo.toml
crates/locus-cli/src/: bundled.rs  main.rs  output.rs
crates/locus-cli/src/commands/: agent.rs  delegate.rs  doctor.rs  hook.rs  init.rs  mod.rs  platform.rs  skill.rs  status.rs  sync.rs  update_content.rs  upgrade.rs
crates/locus-core/: Cargo.toml
crates/locus-core/src/: adapter.rs  agents.rs  capabilities.rs  config.rs  delegation.rs  error.rs  events.rs  lib.rs  memory.rs  platform.rs  skill.rs
crates/locus-index/: Cargo.toml
crates/locus-index/src/: lib.rs
crates/locus-tools/: Cargo.toml
crates/locus-tools/src/: lib.rs
protocols/: context-management.md  degradation.md  memory-schema.md
scripts/: statusline.sh
skills/council/: CouncilMembers.md  OutputFormat.md  RoundStructure.md  SKILL.md
skills/council/Workflows/: Debate.md  Quick.md
skills/creative/: Examples.md  Principles.md  ResearchFoundation.md  SKILL.md  Templates.md
skills/delegation/: SKILL.md
skills/documents/: SKILL.md
skills/extract-wisdom/: SKILL.md
skills/first-principles/: SKILL.md
skills/first-principles/Workflows/: Decompose.md
skills/iterative-depth/: SKILL.md  ScientificFoundation.md  TheLenses.md
skills/iterative-depth/Workflows/: Explore.md
skills/media/: SKILL.md
skills/media/Workflows/: ImageGeneration.md
skills/parser/: SKILL.md
skills/red-team/: Integration.md  Philosophy.md  SKILL.md
skills/red-team/Workflows/: AdversarialValidation.md  ParallelAnalysis.md
skills/research/: SKILL.md  UrlVerificationProtocol.md
skills/research/Workflows/: Deep.md  Enhance.md  Extensive.md  ExtractAlpha.md  ExtractKnowledge.md  Interview.md  Quick.md  Retrieve.md  Standard.md  WebScraping.md  YoutubeExtraction.md
skills/science/: Examples.md  METHODOLOGY.md  Protocol.md  SKILL.md  Templates.md
skills/science/Workflows/: DefineGoal.md  FullCycle.md  QuickDiagnosis.md
skills/security/: SKILL.md
