[workspace]
resolver = "2"
members = [
    "crates/locus-cli",
    "crates/locus-core",
    "crates/locus-adapter-opencode",
    "crates/locus-adapter-claude",
    "crates/locus-index",
    "crates/locus-tools",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/devergehq/locus"
authors = ["Patrick D'Orival <patrick@deverge.com>"]

[workspace.dependencies]
# Shared across crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Internal crates
locus-core = { path = "crates/locus-core" }
locus-tools = { path = "crates/locus-tools" }
locus-index = { path = "crates/locus-index" }
locus-adapter-opencode = { path = "crates/locus-adapter-opencode" }
locus-adapter-claude = { path = "crates/locus-adapter-claude" }
