[package]
name = "locus-adapter-claude"
description = "Claude Code platform adapter for Locus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
locus-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3"
